--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,8 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+<%= render partial: 'layouts/header'%>
+<%= render partial: 'layouts/navigation_bar'%>
 <%= yield %>
 
 </body>
