--- a/app/views/layouts/_navigation_bar.html.erb
+++ b/app/views/layouts/_navigation_bar.html.erb
@@ -15,8 +15,7 @@
                 <li class="nav-item"><%=link_to "About", about_index_path %></li>
                 <li class="nav-item"><%=link_to "Products", products_path %></li>
                 <li class="nav-item"><a href="events.html">Manufacturing Capabilities</a></li>
-                <li class="nav-item"><a href="events.html">Contact</a></li>
-                <li class="nav-item"><%= link_to "Sign in", new_user_session_path %></li>
+                <li class="nav-item"><%= link_to "Contact", contact_index_path %></li>
             </ul><!--//nav-->
         </div><!--//navabr-collapse-->
     </div><!--//container-->
