--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,52 @@
-<h2>Sign up</h2>
+<div class="container">
+  <div class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2" style="margin-top: 50px;">
+    <div class="panel panel-info">
+      <div class="panel-heading">
+        <div class="panel-title">
+          Sign up
+        </div>
+        <div style="float:right; font-size: 85%; position: relative; top:-10px">
+          <%= link_to "Log in", new_session_path(resource_name) %>
+        </div>
+      </div>
+      <div class="panel-body">
+        <%= form_for(resource, as: resource_name, url: registration_path(resource_name), :html => {class: "form-horizontal"}) do |f| %>
+          <% unless resource.errors.empty? %>
+            <div class="alert alert-danger">
+              <%= devise_error_messages! %>
+            </div>
+          <% end %>
+          <div class="form-group">
+            <%= f.label :email, class: "col-md-3 control-label" %>
+            <div class="col-md-9">
+              <%= f.email_field :email, autofocus: true , class: "form-control" %>
+            </div>
+          </div>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+          <div class="form-group">
+            <%= f.label :password, class: "col-md-3 control-label" %>
+            <% if @validatable %>
+            <em>(<%= @minimum_password_length %> characters minimum)</em>
+            <% end %><br />
+            <div class="col-md-9">
+              <%= f.password_field :password, autocomplete: "off", class: "form-control" %>
+            </div>
+          </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+          <div class="form-group">
+            <%= f.label :password_confirmation,class: "col-md-3 control-label" %>
+            <div class="col-md-9">
+              <%= f.password_field :password_confirmation, autocomplete: "off",class: "form-control" %>
+            </div>
+          </div>
+
+          <div class="form-group">
+            <div class="col-md-offset-3 col-md-9">
+              <%= f.submit "Sign up", class: "btn btn-info" %>
+            </div>
+          </div>
+        <% end %>
+      </div>
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @validatable %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
