--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,36 @@
-<h2>Forgot your password?</h2>
+<div class="container">
+  <div class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
+    <div class="panel panel-info">
+      <div class="panel-heading">
+        <div class="panel-title">Forgot your password?</div>
+      </div>
+      <div class="panel-body" style="padding-top:30px">
+        <% unless resource.errors.empty? %>
+          <div class="alert alert-danger">
+            <%= devise_error_messages! %>
+          </div>
+        <% end %>
+        <%= form_for(resource, as: resource_name, url: password_path(resource_name),:html => { method: :post, class: "form-horizontal"}) do |f| %>
+          <div class="input-group", style="margin-bottom: 25px">
+            <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+            <%= f.email_field :email, autofocus: true, class: "form-control", placeholder: "email" %>
+          </div>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= devise_error_messages! %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+          <div class="form-group" style="margin-top:10px">
+            <div class="col-sm-12 controls">
+              <%= f.submit "Send me reset password instructions", class: "btn btn-success" %>
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="col-md-12 control">
+              <div style="border-top: 1px solid#888; padding-top:15px; font-size:85%">
+                <span style="padding-right: 10px"><%= link_to "Log in", new_session_path(resource_name) %></span>
+                <span><%= link_to "Sign up", new_registration_path(resource_name) %></span>
+              </div>
+            </div>
+          </div>
+        <% end %>
+      </div>
+    </div>
+  </div>  
+</div>
