--- a/app/views/contact/index.html.erb
+++ b/app/views/contact/index.html.erb
@@ -17,25 +17,25 @@
                 <div class="row">
                     <article class="contact-form col-md-8 col-sm-7  page-row">                            
                         <h3 class="title">Get in touch</h3>
-                        <form>
-                            <div class="form-group name">
-                                <label>Name</label>
-                                <input type="text" class="form-control" placeholder="Enter your name">
-                            </div><!--//form-group-->
-                            <div class="form-group email">
-                                <label for="email">Email<span class="required">*</span></label>
-                                <input id="email" type="email" class="form-control" placeholder="Enter your email">
-                            </div><!--//form-group-->
-                            <div class="form-group email">
-                                <label for="phone">Phone</label>
-                                <input id="phone" type="tel" class="form-control" placeholder="Enter your contact number">
-                            </div><!--//form-group-->
-                            <div class="form-group message">
-                                <label for="message">Message<span class="required">*</span></label>
-                                <textarea id="message" class="form-control" rows="6" placeholder="Enter your message here..."></textarea>
-                            </div><!--//form-group-->
-                            <button type="submit" class="btn btn-theme">Send message</button>
-                        </form>                  
+                        <%= form_tag contact_index_path do %>
+                             <div class="form-group name">
+                                 <%= label_tag "name" %>
+                                 <%= text_field_tag "[contact]name", nil,class: "form-control", placeholder: "Enter your name"%>
+                             </div>
+                             <div class="form-group email">
+                                 <%= label_tag "email" %><span class="required">*</span>
+                                 <%= text_field_tag "[contact]email", nil,class: "form-control", placeholder: "Enter your email"%>
+                             </div>
+                             <div class="form-group email">
+                                 <%= label_tag "phone" %>
+                                 <%= text_field_tag "[contact]phone", nil,class: "form-control", placeholder: "Enter your contact number"%>
+                             </div>
+                             <div class="form-group message">
+                                 <%= label_tag "message"%><span class="required">*</span>
+                                 <%= text_area_tag "[contact]message", nil, class: "form-control", placeholder: "Enter your message here...", rows: "6"%>
+                             </div>
+                             <%= submit_tag "Send message", class: "btn btn-theme"%>
+                        <% end %>              
                     </article><!--//contact-form-->
                     <aside class="page-sidebar  col-md-3 col-md-offset-1 col-sm-4 col-sm-offset-1">
                         <section class="widget">
