add email link and revise phone number

--- a/app/views/contact/index.html.erb
+++ b/app/views/contact/index.html.erb
@@ -40,8 +40,8 @@
                     <aside class="page-sidebar  col-md-3 col-md-offset-1 col-sm-4 col-sm-offset-1">
                         <section class="widget">
                             <h3 class="title">All Enquiries</h3>
-                            <p class="tel"><i class="fa fa-phone"></i>Tel: 0800 123 4567</p>
-                            <p class="email"><i class="fa fa-envelope"></i>Email: <a href="#">enquires@website.com</a></p>
+                            <p class="tel"><i class="fa fa-phone"></i>Tel: +886 2 89131236 #21</p>
+                            <p class="email"><i class="fa fa-envelope"></i>Email: <%= mail_to "sandy@locksure.com.tw"%></p>
                         </section>  
                         <section class="widget has-divider">
                             <h3 class="title">Postal Address</h3>
