--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,13 +5,12 @@
     </div><!--//to-bar-->
     <div class="header-main container">
         <h1 class="logo col-md-4 col-sm-4">
-            <a href="index.html">
-                <%= image_tag "logo.png", id: "logo", alt: "logo"%>
+            <%= link_to(image_tag("logo.png", id: "logo", alt: "logo"), root_path) %>
         </h1><!--//logo-->           
         <div class="info col-md-8 col-sm-8">
             <div class="contact pull-right">
-                <p class="phone"><i class="fa fa-phone"></i>Call us today 0800 123 4567</p> 
-                <p class="email"><i class="fa fa-envelope"></i><a href="#">enquires@website.com</a></p>
+                <p class="phone"><i class="fa fa-phone"></i>Call us today +886 2 89131236 #21</p> 
+                <p class="email"><i class="fa fa-envelope"></i><%= mail_to "sandy@locksure.com.tw"%></p>
             </div><!--//contact-->
         </div><!--//info-->
     </div><!--//header-main-->
