add company address

--- a/app/views/contact/index.html.erb
+++ b/app/views/contact/index.html.erb
@@ -47,10 +47,8 @@
                             <h3 class="title">Postal Address</h3>
                             <p class="adr">
                                 <span class="adr-group">       
-                                    <span class="street-address">College Green</span><br>
-                                    <span class="region">56 College Green Road</span><br>
-                                    <span class="postal-code">BS16 AP18</span><br>
-                                    <span class="country-name">UK</span>
+                                    <span class="street-address">8F, No.207, Sec.3, Beixin Rd</span><br>
+                                    <span class="region"> New Taipei City, Taiwan 231-43</span><br>
                                 </span>
                             </p>
                         </section><!--//widget-->     
