--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,6 +9,15 @@
                   <% end %>
               </ul><!--//slides-->
           </div><!--//flexslider-->
+          <section class="promo box box-dark">        
+              <div class="col-md-9">
+              <h1 class="section-heading">Why Locksure</h1>
+                  <p>Locksure provide progressive stamping, deep drawing, in-die tapping.</p>   
+              </div>  
+              <div class="col-md-3">
+                  <%= link_to "Contact Us", contact_index_path, class: "btn btn-cta"%>
+              </div>
+          </section><!--//promo-->
       </div><!--//content-->
   </div><!--//wrapper-->
     <script type="text/javascript" src="assets/plugins/jquery-1.10.2.min.js"></script>
