--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -5,141 +5,32 @@
         <div class="content container">
             <div class="page-wrapper">
                 <header class="page-heading clearfix">
-                    <h1 class="heading-title pull-left">Gallery <small>(3 columns)</small></h1>
+                    <h1 class="heading-title pull-left">Product</h1>
                     <div class="breadcrumbs pull-right">
                         <ul class="breadcrumbs-list">
                             <li class="breadcrumbs-label">You are here:</li>
                             <li><a href="index.html">Home</a><i class="fa fa-angle-right"></i></li>
-                            <li class="current">Gallery</li>
+                            <li class="current">Product</li>
                         </ul>
                     </div><!--//breadcrumbs-->
                 </header> 
                 <div class="page-content">    
                     <div class="page-row">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla iaculis, nisl eget venenatis ultricies, eros augue semper turpis, vitae euismod leo urna vitae nulla. Mauris sem urna, aliquet quis sodales et, convallis vel ante. Sed convallis id sem sed feugiat. Aenean eget tempus tortor.</p>    
-                        <p class="page-row text-muted">Image credit: <a href="http://www.flickr.com/photos/francisco_osorio/" target="_blank">Francisco Osorio</a>, <a href="http://creativecommons.org/licenses/by/2.0/deed.en" target="_blank">Creative Commons 2.0 license</a></p>
+                        <p></p>    
+                        <p class="page-row text-muted"></p>
                     </div>
                     <div class="row page-row">
-                        <div class="col-md-4 col-sm-4 col-xs-12 text-center">
-                            <div class="album-cover">
-                                <a href="gallery-album.html"><img class="img-responsive" src="assets/images/gallery/gallery-thumb-1.jpg" alt="" /></a>
-                                <div class="desc">
-                                    <h4><small><a href="#">Album Lorem Ipsum</a></small></h4>
-                                    <p>Integer ornare nisl tortor, sed condimentum metus pulvinar ut. Etiam ac pretium nunc. Donec porttitor erat non nibh pellentesque vehicula. Vestibulum tincidunt</p>
+                        <% @categories.each do |category| %>
+                            <div class="col-md-4 col-sm-4 col-xs-12 text-center">
+                                <div class="album-cover">
+                                    <a href="gallery-album.html"><img class="img-responsive" src="assets/images/gallery/gallery-thumb-1.jpg" alt="" /></a>
+                                    <div class="desc">
+                                        <h4><small><a href="#"><%= category.name %></a></small></h4>
+                                        <p><%= category.description%></p>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        
-                        <div class="col-md-4 col-sm-4 col-xs-12 text-center">
-                            <div class="album-cover">
-                                <a href="gallery-album.html"><img class="img-responsive" src="assets/images/gallery/gallery-thumb-2.jpg" alt="" /></a>
-                                <div class="desc">
-                                    <h4><small><a href="#">Album Ornare</a></small></h4>
-                                    <p>Aenean dictum urna nec ligula consectetur, id ornare leo tincidunt. Praesent ut tempor nibh. Sed eleifend, elit at ornare pretium, lorem mauris convallis arcu</p>
-                                </div>
-                            </div>
-                        </div>
-                        
-                        <div class="col-md-4 col-sm-4 col-xs-12 text-center">
-                            <div class="album-cover">
-                                <a href="gallery-album.html"><img class="img-responsive" src="assets/images/gallery/gallery-thumb-3.jpg" alt="" /></a>
-                                <div class="desc">
-                                    <h4><small><a href="#">Album Suspendisse</a></small></h4>
-                                    <p>Suspendisse at purus ac neque auctor viverra vel in arcu. Quisque commodo augue nisi, ut ultrices odio suscipit et. Quisque interdum massa sem</p>
-                                </div>
-                            </div>
-                        </div>
-                        
-                        <div class="col-md-4 col-sm-4 col-xs-12 text-center">
-                            <div class="album-cover">
-                                <a href="gallery-album.html"><img class="img-responsive" src="assets/images/gallery/gallery-thumb-4.jpg" alt="" /></a>
-                                <div class="desc">
-                                    <h4><small><a href="#">Album Suspendisse</a></small></h4>
-                                    <p>Suspendisse at purus ac neque auctor viverra vel in arcu. Quisque commodo augue nisi, ut ultrices odio suscipit et. Quisque interdum massa sem</p>
-                                </div>
-                            </div>
-                        </div>
-                        
-                        <div class="col-md-4 col-sm-4 col-xs-12 text-center">
-                            <div class="album-cover">
-                                <a href="gallery-album.html"><img class="img-responsive" src="assets/images/gallery/gallery-thumb-5.jpg" alt="" /></a>
-                                <div class="desc">
-                                    <h4><small><a href="#">Album Suspendisse</a></small></h4>
-                                    <p>Suspendisse at purus ac neque auctor viverra vel in arcu. Quisque commodo augue nisi, ut ultrices odio suscipit et. Quisque interdum massa sem</p>
-                                </div>
-                            </div>
-                        </div>
-                        
-                        <div class="col-md-4 col-sm-4 col-xs-12 text-center">
-                            <div class="album-cover">
-                                <a href="gallery-album.html"><img class="img-responsive" src="assets/images/gallery/gallery-thumb-6.jpg" alt="" /></a>
-                                <div class="desc">
-                                    <h4><small><a href="#">Album Suspendisse</a></small></h4>
-                                    <p>Suspendisse at purus ac neque auctor viverra vel in arcu. Quisque commodo augue nisi, ut ultrices odio suscipit et. Quisque interdum massa sem</p>
-                                </div>
-                            </div>
-                        </div>
-                        
-                        <div class="col-md-4 col-sm-4 col-xs-12 text-center">
-                            <div class="album-cover">
-                                <a href="gallery-album.html"><img class="img-responsive" src="assets/images/gallery/gallery-thumb-7.jpg" alt="" /></a>
-                                <div class="desc">
-                                    <h4><small><a href="#">Album Suspendisse</a></small></h4>
-                                    <p>Suspendisse at purus ac neque auctor viverra vel in arcu. Quisque commodo augue nisi, ut ultrices odio suscipit et. Quisque interdum massa sem</p>
-                                </div>
-                            </div>
-                        </div>
-                        
-                        <div class="col-md-4 col-sm-4 col-xs-12 text-center">
-                            <div class="album-cover">
-                                <a href="gallery-album.html"><img class="img-responsive" src="assets/images/gallery/gallery-thumb-8.jpg" alt="" /></a>
-                                <div class="desc">
-                                    <h4><small><a href="#">Album Suspendisse</a></small></h4>
-                                    <p>Suspendisse at purus ac neque auctor viverra vel in arcu. Quisque commodo augue nisi, ut ultrices odio suscipit et. Quisque interdum massa sem</p>
-                                </div>
-                            </div>
-                        </div>
-                        
-                        <div class="col-md-4 col-sm-4 col-xs-12 text-center">
-                            <div class="album-cover">
-                                <a href="gallery-album.html"><img class="img-responsive" src="assets/images/gallery/gallery-thumb-9.jpg" alt="" /></a>
-                                <div class="desc">
-                                    <h4><small><a href="#">Album Suspendisse</a></small></h4>
-                                    <p>Suspendisse at purus ac neque auctor viverra vel in arcu. Quisque commodo augue nisi, ut ultrices odio suscipit et. Quisque interdum massa sem</p>
-                                </div>
-                            </div>
-                        </div>
-                        
-                        <div class="col-md-4 col-sm-4 col-xs-12 text-center">
-                            <div class="album-cover">
-                                <a href="gallery-album.html"><img class="img-responsive" src="assets/images/gallery/gallery-thumb-10.jpg" alt="" /></a>
-                                <div class="desc">
-                                    <h4><small><a href="#">Album Suspendisse</a></small></h4>
-                                    <p>Suspendisse at purus ac neque auctor viverra vel in arcu. Quisque commodo augue nisi, ut ultrices odio suscipit et. Quisque interdum massa sem</p>
-                                </div>
-                            </div>
-                        </div>
-                        
-                        <div class="col-md-4 col-sm-4 col-xs-12 text-center">
-                            <div class="album-cover">
-                                <a href="gallery-album.html"><img class="img-responsive" src="assets/images/gallery/gallery-thumb-11.jpg" alt="" /></a>
-                                <div class="desc">
-                                    <h4><small><a href="#">Album Suspendisse</a></small></h4>
-                                    <p>Suspendisse at purus ac neque auctor viverra vel in arcu. Quisque commodo augue nisi, ut ultrices odio suscipit et. Quisque interdum massa sem</p>
-                                </div>
-                            </div>
-                        </div>
-                        
-                        <div class="col-md-4 col-sm-4 col-xs-12 text-center">
-                            <div class="album-cover">
-                                <a href="gallery-album.html"><img class="img-responsive" src="assets/images/gallery/gallery-thumb-12.jpg" alt="" /></a>
-                                <div class="desc">
-                                    <h4><small><a href="#">Album Suspendisse</a></small></h4>
-                                    <p>Suspendisse at purus ac neque auctor viverra vel in arcu. Quisque commodo augue nisi, ut ultrices odio suscipit et. Quisque interdum massa sem</p>
-                                </div>
-                            </div>
-                        </div>
-                        
+                        <% end %>
                     </div><!--//page-row-->
                     
                 </div><!--//page-content-->
