revise header company name

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,7 @@
     </div><!--//to-bar-->
     <div class="header-main container">
         <h1 class="logo col-md-4 col-sm-4">
-            <%= link_to(image_tag("logo.png", id: "logo", alt: "logo"), root_path) %>
+            <%= link_to("LOCKSURE", root_path) %>
         </h1><!--//logo-->           
         <div class="info col-md-8 col-sm-8">
             <div class="contact pull-right">
