--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -23,7 +23,7 @@
                         <% @categories.each do |category| %>
                             <div class="col-md-4 col-sm-4 col-xs-12 text-center">
                                 <div class="album-cover">
-                                    <a href="gallery-album.html"><img class="img-responsive" src="assets/images/gallery/gallery-thumb-1.jpg" alt="" /></a>
+                                    <%= link_to(image_tag("#{category.image}", class: "img-responsive"), product_path(category))%>
                                     <div class="desc">
                                         <h4><small><%=link_to "#{category.name}", product_path(category) %></small></h4>
                                         <p><%= category.description%></p>
