contact頁面form拿掉,email不要直接顯示

--- a/app/views/contact/index.html.erb
+++ b/app/views/contact/index.html.erb
@@ -1,6 +1,6 @@
   <div class="wrapper">
-      
-    <!-- ******CONTENT****** --> 
+
+    <!-- ******CONTENT****** -->
     <div class="content container">
         <div class="page-wrapper">
             <header class="page-heading clearfix">
@@ -12,47 +12,28 @@
                         <li class="current">Contact</li>
                     </ul>
                 </div><!--//breadcrumbs-->
-            </header> 
+            </header>
             <div class="page-content">
                 <div class="row">
-                    <article class="contact-form col-md-8 col-sm-7  page-row">                            
-                        <h3 class="title">Get in touch</h3>
-                        <%= form_tag contact_index_path do %>
-                             <div class="form-group name">
-                                 <%= label_tag "name" %>
-                                 <%= text_field_tag "[contact]name", nil,class: "form-control", placeholder: "Enter your name"%>
-                             </div>
-                             <div class="form-group email">
-                                 <%= label_tag "email" %><span class="required">*</span>
-                                 <%= text_field_tag "[contact]email", nil,class: "form-control", placeholder: "Enter your email"%>
-                             </div>
-                             <div class="form-group email">
-                                 <%= label_tag "phone" %>
-                                 <%= text_field_tag "[contact]phone", nil,class: "form-control", placeholder: "Enter your contact number"%>
-                             </div>
-                             <div class="form-group message">
-                                 <%= label_tag "message"%><span class="required">*</span>
-                                 <%= text_area_tag "[contact]message", nil, class: "form-control", placeholder: "Enter your message here...", rows: "6"%>
-                             </div>
-                             <%= submit_tag "Send message", class: "btn btn-theme"%>
-                        <% end %>              
-                    </article><!--//contact-form-->
-                    <aside class="page-sidebar  col-md-3 col-md-offset-1 col-sm-4 col-sm-offset-1">
+                    <aside class="page-sidebar  col-md-4 col-md-offset-0  col-sm-4 col-sm-offset-0">
                         <section class="widget">
                             <h3 class="title">All Enquiries</h3>
                             <p class="tel"><i class="fa fa-phone"></i>Tel: +886 2 89131236 #21</p>
-                            <p class="email"><i class="fa fa-envelope"></i>Email: <%= mail_to "sandy@locksure.com.tw"%></p>
-                        </section>  
+                            <div id="Email"><p class="email"><i class="fa fa-envelope"></i><a>Our Email</a></p></div>
+                            <div style="display:none" id="realEmail"><p class="email"><i class="fa fa-envelope"></i><%= mail_to "sandy@locksure.com.tw"%></p></div>
+                          </section>
+                    </aside>
+                    <aside class="page-sidebar  col-md-4 col-md-offset-0 col-sm-4 col-sm-offset-0">
                         <section class="widget has-divider">
                             <h3 class="title">Postal Address</h3>
                             <p class="adr">
-                                <span class="adr-group">       
+                                <span class="adr-group">
                                     <span class="street-address">8F, No.207, Sec.3, Beixin Rd</span><br>
                                     <span class="region"> New Taipei City, Taiwan 231-43</span><br>
                                 </span>
                             </p>
-                        </section><!--//widget-->     
-               
+                        </section><!--//widget-->
+
                     </aside><!--//page-sidebar-->
                 </div><!--//page-row-->
                 <div class="page-row">
@@ -62,21 +43,29 @@
                     </article><!--//map-->
                 </div><!--//page-row-->
             </div><!--//page-content-->
-        </div><!--//page-wrapper--> 
+        </div><!--//page-wrapper-->
     </div><!--//content-->
-  </div><!--//wrapper--> 
-  <!-- Javascript -->          
+  </div><!--//wrapper-->
+  <!-- Javascript -->
+  <script>
+  $(document).ready(function(){
+     $("#Email").click(function(){
+       $(this).replaceWith($("#realEmail"));
+       $("#realEmail").show();
+     });
+  });
+  </script>
   <script type="text/javascript" src="assets/plugins/jquery-1.10.2.min.js"></script>
   <script type="text/javascript" src="assets/plugins/jquery-migrate-1.2.1.min.js"></script>
-  <script type="text/javascript" src="assets/plugins/bootstrap/js/bootstrap.min.js"></script> 
-  <script type="text/javascript" src="assets/plugins/bootstrap-hover-dropdown.min.js"></script> 
+  <script type="text/javascript" src="assets/plugins/bootstrap/js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="assets/plugins/bootstrap-hover-dropdown.min.js"></script>
   <script type="text/javascript" src="assets/plugins/back-to-top.js"></script>
   <script type="text/javascript" src="assets/plugins/jquery-placeholder/jquery.placeholder.js"></script>
   <script type="text/javascript" src="assets/plugins/pretty-photo/js/jquery.prettyPhoto.js"></script>
   <script type="text/javascript" src="assets/plugins/flexslider/jquery.flexslider-min.js"></script>
-  <script type="text/javascript" src="assets/plugins/jflickrfeed/jflickrfeed.min.js"></script> 
+  <script type="text/javascript" src="assets/plugins/jflickrfeed/jflickrfeed.min.js"></script>
   <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
-  <script type="text/javascript" src="assets/plugins/gmaps/gmaps.js"></script>   
-  <script type="text/javascript" src="assets/js/map.js"></script> 
-  <script type="text/javascript" src="assets/js/main.js"></script>          
-  
+  <script type="text/javascript" src="assets/plugins/gmaps/gmaps.js"></script>
+  <script type="text/javascript" src="assets/js/map.js"></script>
+  <script type="text/javascript" src="assets/js/main.js"></script>
+
