--- a/app/views/contact/index.html.erb
+++ b/app/views/contact/index.html.erb
@@ -19,8 +19,7 @@
                         <section class="widget">
                             <h3 class="title">All Enquiries</h3>
                             <p class="tel"><i class="fa fa-phone"></i>Tel: +886 2 89131236 #21</p>
-                            <div id="Email"><p class="email"><i class="fa fa-envelope"></i><a>Our Email</a></p></div>
-                            <div style="display:none" id="realEmail"><p class="email"><i class="fa fa-envelope"></i><%= mail_to "sandy@locksure.com.tw"%></p></div>
+                            <div id="Email"><p class="email"><i class="fa fa-envelope"></i><a>Show Email</a></p></div>
                           </section>
                     </aside>
                     <aside class="page-sidebar  col-md-4 col-md-offset-0 col-sm-4 col-sm-offset-0">
@@ -47,14 +46,7 @@
     </div><!--//content-->
   </div><!--//wrapper-->
   <!-- Javascript -->
-  <script>
-  $(document).ready(function(){
-     $("#Email").click(function(){
-       $(this).replaceWith($("#realEmail"));
-       $("#realEmail").show();
-     });
-  });
-  </script>
+  <%= javascript_include_tag 'contact' %>
   <script type="text/javascript" src="assets/plugins/jquery-1.10.2.min.js"></script>
   <script type="text/javascript" src="assets/plugins/jquery-migrate-1.2.1.min.js"></script>
   <script type="text/javascript" src="assets/plugins/bootstrap/js/bootstrap.min.js"></script>
