--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Locksure</title>
   <%= stylesheet_link_tag    'application', media: 'all'%>
   <%= javascript_include_tag 'application' %>
   <%= stylesheet_link_tag 'http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700' %>
   <!-- Global CSS -->
-  <link rel="stylesheet" href="/assets/plugins/bootstrap/css/bootstrap.min.css">   
-  <!-- Plugins CSS -->    
+  <link rel="stylesheet" href="/assets/plugins/bootstrap/css/bootstrap.min.css">
+  <!-- Plugins CSS -->
   <link rel="stylesheet" href="/assets/plugins/font-awesome/css/font-awesome.css">
   <link rel="stylesheet" href="/assets/plugins/flexslider/flexslider.css">
-  <link rel="stylesheet" href="/assets/plugins/pretty-photo/css/prettyPhoto.css"> 
+  <link rel="stylesheet" href="/assets/plugins/pretty-photo/css/prettyPhoto.css">
   <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
