disable right click event on images

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
   <title>Locksure</title>
   <%= stylesheet_link_tag    'application', media: 'all'%>
   <%= javascript_include_tag 'application' %>
+  <%= javascript_include_tag 'global' %>
   <%= stylesheet_link_tag 'http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700' %>
   <!-- Global CSS -->
   <link rel="stylesheet" href="/assets/plugins/bootstrap/css/bootstrap.min.css">
