--- a/app/views/layouts/_navigation_bar.html.erb
+++ b/app/views/layouts/_navigation_bar.html.erb
@@ -15,6 +15,7 @@
                 <li class="nav-item"><%=link_to "About", about_index_path %></li>
                 <li class="nav-item"><%=link_to "Products", products_path %></li>
                 <li class="nav-item"><%=link_to "Manufacturing Capabilities", manufacturing_index_path %></li>
+                <li class="nav-item"><%=link_to "Catelog", catelog_index_path %></li>
                 <li class="nav-item"><%=link_to "Contact", contact_index_path %></li>
             </ul><!--//nav-->
         </div><!--//navabr-collapse-->
