update about page

--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -1,5 +1,5 @@
 <div class="wrapper">
-    <!-- ******CONTENT****** --> 
+    <!-- ******CONTENT****** -->
     <div class="content container">
         <div class="page-wrapper">
             <header class="page-heading clearfix">
@@ -11,46 +11,55 @@
                         <li class="current">About</li>
                     </ul>
                 </div><!--//breadcrumbs-->
-            </header> 
+            </header>
             <div class="page-content">
                 <div class="row page-row">
-                    <article class="welcome col-md-8 col-sm-7">                         
-                        <h3 class="title">Welcome to College Green Online</h3>
-                        <p><img class="img-responsive" src="assets/images/750x300-about.jpg" alt="" /></p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras venenatis urna lectus, a euismod metus facilisis sed. Aliquam tristique sapien et tincidunt semper. Mauris ornare, turpis ac molestie molestie, erat nisi placerat ipsum, sit amet imperdiet ipsum lacus eu orci. Suspendisse euismod mollis nibh eu rhoncus. </p>
-                        <ul class="custom-list-style">
-                            <li><i class="fa fa-check"></i>Lorem ipsum dolor sit ame</li>
-                            <li><i class="fa fa-check"></i>Curabitur elit elit</li>
-                            <li><i class="fa fa-check"></i>Nunc tincidunt ipsum a risus</li>
-                            <li><i class="fa fa-check"></i>Integer vitae nisi a odio</li>
-                            <li><i class="fa fa-check"></i>Suspendisse bibendum tempor</li>
-                        </ul>
-                        
+                    <article class="welcome col-md-8 col-sm-7">
+                        <h3 class="title">Locksure’s New Plant in Chuanghua Ready to Take off. Automotive Welded Nut Runs in Mass Production by Kelly Wang,Fastener World Inc.</h3>
+                        <!--<p><img class="img-responsive" src="assets/images/750x300-about.jpg" alt="" /></p>-->
+                        <!--
+                          <ul class="custom-list-style">
+                              <li><i class="fa fa-check"></i>Lorem ipsum dolor sit ame</li>
+                              <li><i class="fa fa-check"></i>Curabitur elit elit</li>
+                              <li><i class="fa fa-check"></i>Nunc tincidunt ipsum a risus</li>
+                              <li><i class="fa fa-check"></i>Integer vitae nisi a odio</li>
+                              <li><i class="fa fa-check"></i>Suspendisse bibendum tempor</li>
+                          </ul>
+                        !-->
+                        <!--
                         <blockquote class="custom-quote">
                             <p><i class="fa fa-quote-left"></i>Viverra magna pellentesque in magnis gravida sit augue felis vehicula vestibulum semper penatibus justo ornare semper Gravida felis platea arcu mus non. Montes at posuere. Natoque.</p>
                             <p class="people"><span class="name">Adam Windsor</span><br><span class="title">Principle, College Green Online</span></p>
                         </blockquote>
-                        <p>
-                        Morbi semper. Hac euismod bibendum odio sed sociosqu primis magna suscipit facilisi litora viverra eget nibh praesent vehicula luctus Integer nostra ac duis metus orci.
+                        -->
+                        <p><img class="img-responsive" src="assets/about1.png" alt="" /></p>
+                        <blockquote class="custom-quote">
+                            <p><i class="fa fa-quote-left"></i>Deep Drawing,Progressive Stamping& In-Die Tapping New Plant in Changhua Doubles Capacity 106 Stamping M/C with 800 Tons Monthly Capacity</p>
+                        </blockquote>
+                        <p>Year 2011 is booming year for Locksure. It spent 2 years and successfully developed a series of automotive welded nuts, which are going into mass production after strict inspection and certification. In addition, the new plant it co-built with Sheng Tien Metals. Was completed in December 2010 and has started to operate sin this January. In the new plant there are 106 sets of Press Machines(the largest one is 400 tons). When it introduced 3 sets of 300-ton Pressing Machines, 3 sets of 600-ton machines and 2 sets of 400-ton machines, the capacity has been doubled, reaching 800 tons per month. With efforts of the R&D team, the high0level technology of progressive stamping has been at the top. Considering the future of Locksure, President Sandy Su said, “Year 2011 through 2012 will be years with the fastest growth and the most successful result for Locksure.”</p>
+                        <p>The biggest advantage of Locksure lies in the R&D team can design the most effective processing steps and dies per customer’s drawing, making quality control stricter, increasing efficiency of production, and reducing costs to customers. The In-Die Tapping design can also apply to the Progressive Die, with tapping 8 holes Maximum at one time. Presence of threads monitoring and metal chip/burr control after tapping are also admired by international buyers in the automotive industry.</p>
+                        <p><img class="img-responsive" src="assets/about2.png" alt="" /></p>
+                        <blockquote class="custom-quote">
+                            <p><i class="fa fa-quote-left"></i>Defeating Competitors Worldwide & Entrusted by Major Car Makers to Develop New Products</p>
+                        </blockquote>
 
-Vehicula praesent dolor quam montes fames risus interdum. Tortor lacinia sem aenean sit tellus montes velit ultricies leo eget felis mollis quam. Non odio leo tempus condimentum. Neque. Potenti ornare sapien diam hymenaeos conubia ac. Euismod, venenatis Vulputate sodales morbi aliquet sollicitudin.    
-                        </p>
+                        <p>“Sales Team” is another advantage of Locksure. The team has been well-trained and can fully cooperate with engineers to evaluate all elements of production including Metal Sheet Coil, Surface Treatment, Torque Strength, Proof Load, Quench-Tempering/Case Hardening/Carbonitriding Heat Treatment. The accurate quotes provided by the professional sales team have left a brilliant impression to customers.</p>
                     </article><!--//page-content-->
                 </div><!--//page-row-->
             </div><!--//page-content-->
-        </div><!--//page--> 
+        </div><!--//page-->
     </div><!--//content-->
 </div><!--//wrapper-->
 
 
-<!-- Javascript -->          
+<!-- Javascript -->
 <script type="text/javascript" src="assets/plugins/jquery-1.10.2.min.js"></script>
 <script type="text/javascript" src="assets/plugins/jquery-migrate-1.2.1.min.js"></script>
-<script type="text/javascript" src="assets/plugins/bootstrap/js/bootstrap.min.js"></script> 
-<script type="text/javascript" src="assets/plugins/bootstrap-hover-dropdown.min.js"></script> 
+<script type="text/javascript" src="assets/plugins/bootstrap/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="assets/plugins/bootstrap-hover-dropdown.min.js"></script>
 <script type="text/javascript" src="assets/plugins/back-to-top.js"></script>
 <script type="text/javascript" src="assets/plugins/jquery-placeholder/jquery.placeholder.js"></script>
 <script type="text/javascript" src="assets/plugins/pretty-photo/js/jquery.prettyPhoto.js"></script>
 <script type="text/javascript" src="assets/plugins/flexslider/jquery.flexslider-min.js"></script>
-<script type="text/javascript" src="assets/plugins/jflickrfeed/jflickrfeed.min.js"></script> 
-<script type="text/javascript" src="assets/js/main.js"></script>   
+<script type="text/javascript" src="assets/plugins/jflickrfeed/jflickrfeed.min.js"></script>
+<script type="text/javascript" src="assets/js/main.js"></script>
