fix image path for production

--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -32,13 +32,13 @@
                             <p class="people"><span class="name">Adam Windsor</span><br><span class="title">Principle, College Green Online</span></p>
                         </blockquote>
                         -->
-                        <p><img class="img-responsive" src="assets/about1.png" alt="" /></p>
+                        <p><img class="img-responsive" src="<%= asset_path "about1.png"%>" alt="" /></p>
                         <blockquote class="custom-quote">
                             <p><i class="fa fa-quote-left"></i>Deep Drawing,Progressive Stamping& In-Die Tapping New Plant in Changhua Doubles Capacity 106 Stamping M/C with 800 Tons Monthly Capacity</p>
                         </blockquote>
                         <p>Year 2011 is booming year for Locksure. It spent 2 years and successfully developed a series of automotive welded nuts, which are going into mass production after strict inspection and certification. In addition, the new plant it co-built with Sheng Tien Metals. Was completed in December 2010 and has started to operate sin this January. In the new plant there are 106 sets of Press Machines(the largest one is 400 tons). When it introduced 3 sets of 300-ton Pressing Machines, 3 sets of 600-ton machines and 2 sets of 400-ton machines, the capacity has been doubled, reaching 800 tons per month. With efforts of the R&D team, the high0level technology of progressive stamping has been at the top. Considering the future of Locksure, President Sandy Su said, “Year 2011 through 2012 will be years with the fastest growth and the most successful result for Locksure.”</p>
                         <p>The biggest advantage of Locksure lies in the R&D team can design the most effective processing steps and dies per customer’s drawing, making quality control stricter, increasing efficiency of production, and reducing costs to customers. The In-Die Tapping design can also apply to the Progressive Die, with tapping 8 holes Maximum at one time. Presence of threads monitoring and metal chip/burr control after tapping are also admired by international buyers in the automotive industry.</p>
-                        <p><img class="img-responsive" src="assets/about2.png" alt="" /></p>
+                        <p><img class="img-responsive" src="<%= asset_path "about2.png"%>" alt="" /></p>
                         <blockquote class="custom-quote">
                             <p><i class="fa fa-quote-left"></i>Defeating Competitors Worldwide & Entrusted by Major Car Makers to Develop New Products</p>
                         </blockquote>
