--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,7 +9,7 @@
         </h1><!--//logo-->
         <div class="info col-md-8 col-sm-8">
             <div class="contact pull-right">
-                <p class="phone"><i class="fa fa-phone"></i>Call us today +886 2 89131236 #21</p>
+                <p class="phone"><i class="fa fa-phone"></i>Call us today +886 2 89131236</p>
                 <p class="email"><i class="fa fa-envelope"></i><a>Show Email</a></p>
             </div><!--//contact-->
         </div><!--//info-->
