--- a/app/views/layouts/_navigation_bar.html.erb
+++ b/app/views/layouts/_navigation_bar.html.erb
@@ -8,14 +8,14 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button><!--//nav-toggle-->
-        </div><!--//navbar-header-->            
+        </div><!--//navbar-header-->
         <div class="navbar-collapse collapse" id="navbar-collapse">
             <ul class="nav navbar-nav">
                 <li class="nav-item"><%=link_to "Home", root_path %></li>
                 <li class="nav-item"><%=link_to "About", about_index_path %></li>
                 <li class="nav-item"><%=link_to "Products", products_path %></li>
                 <li class="nav-item"><%=link_to "Manufacturing Capabilities", manufacturing_index_path %></li>
-                <li class="nav-item"><%=link_to "Catelog", catelog_index_path %></li>
+                <li class="nav-item"><%=link_to "Catalog", catalog_index_path %></li>
                 <li class="nav-item"><%=link_to "Contact", contact_index_path %></li>
             </ul><!--//nav-->
         </div><!--//navabr-collapse-->
