update contact page wording

--- a/app/views/contact/index.html.erb
+++ b/app/views/contact/index.html.erb
@@ -37,7 +37,7 @@
                 </div><!--//page-row-->
                 <div class="page-row">
                     <article class="map-section">
-                        <h3 class="title">How to find us</h3>
+                        <h3 class="title">Where to find us</h3>
                         <div id="map"></div><!--//map-->
                     </article><!--//map-->
                 </div><!--//page-row-->
