increase product page title

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -23,7 +23,7 @@
                   <%= image_tag product.image_url, class: "img-responsive" %>
                   <div class="desc">
                     <h4>
-                      <small><%= product.name %></small>
+                      <%= product.name %>
                     </h4>
                   </div>
                 </div>
